Fix the link hover color and add new border size design tokens.
The link hover color was too light, based on the wrong color. We now use
a better color as the basis for darkening for the hover color. There's
still more to do here in terms of cleanup, but this fixes some
noticeable visual issues.

THere's also new design tokens for border sizes. We now have `medium`
(2px) and `thick` (4px) sizes.

Testing Done:
Made use of these in some changes in Review Board.

Reviewed at https://reviews.reviewboard.org/r/13755/

--- a/src/ink/less/themes/default/units.less
+++ b/src/ink/less/themes/default/units.less
@@ -31,6 +31,8 @@
       @vars: {
         x-thin: 0.5px;
         thin: 1px;
+        medium: 2px;
+        thick: 4px;
       });
   }
 
